js/js.translator/testData/incremental/invalidation/typeScriptExports/lib2/l2.5.kt
@JsExport
class MyClass(konst stepId: Int) {
    @JsName("baz")
    fun qux() = foo() + stepId
}

